--- a/base.less
+++ b/base.less
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  background: @midnight-darkest;
+  background: darken(@midnight-darkest, 5%);
   font-family: Monaco;
   font-size: 26px;
   padding: 0;
@@ -33,12 +33,17 @@ h1 {
   color: @blue-lightest;
 }
 
+.fades {
+  transition: opacity 1000ms;
+  opacity: 0;
+}
+
 .fixed(@top: var(--letterbox-top),
-@left: var(--letterbox-left),
-@right: var(--letterbox-right),
-@width: var(--letterbox-width),
-@height: var(--letterbox-height),
-@bottom: var(--letterbox-bottom)) {
+        @left: var(--letterbox-left),
+        @right: var(--letterbox-right),
+        @width: var(--letterbox-width),
+        @height: var(--letterbox-height),
+        @bottom: var(--letterbox-bottom)) {
   position: fixed;
   width: @width;
   height: @height;
@@ -46,6 +51,17 @@ h1 {
   left: @left;
   bottom: @bottom;
   right: @right;
+}
+
+.stage(@top: 0, @left: 0, @width: 100, @height: 100) {
+  .fixed(
+    calc(var(--letterbox-top) + @top * var(--su)),
+    calc(var(--letterbox-left) + @left * var(--su)),
+    auto,
+    calc(var(--letterbox-width) - @width * var(--su)),
+    calc(var(--letterbox-height) - @height * var(--su)),
+    auto
+    )
 }
 
 .absolute(@top: 0, @left: 0, @width: 100vw, @height: 100vh) {
@@ -122,4 +138,5 @@ build-note {
 
 #graph {
   .fixed();
+  .fades();
 }
