--- a/base.less
+++ b/base.less
@@ -138,5 +138,12 @@ build-note {
 
 #graph {
   .fixed();
-  .fades();
+  transition: filter 1s;
+  filter: blur(20px);
+}
+
+.showGraph {
+  #graph {
+    filter: none;
+  }
 }
