--- a/bug.less
+++ b/bug.less
@@ -14,8 +14,8 @@
   top: 0; left: 0;  
   color: fuchsia;
   background: linear-gradient(90deg, @midnight-darkest 40%, black, @midnight-darkest 60%);
-  border: thin solid @pink-base;
-  border-left: 10% solid @pink-base;
+  border: thin solid @yellow-base;
+  border-left: 10% solid @yellow-base;
   padding: 4px;
   font-family: Charter, serif;
   font-size: 36px;
@@ -44,7 +44,7 @@
 
   > * {
     .absoluteCenter();
-    color: @pink-base;
+    color: @yellow-base;
     text-decoration: none;
     opacity: 0;
     transition: opacity 3s;
