--- a/base.less
+++ b/base.less
@@ -25,6 +25,15 @@ body {
   height: 100%;
 }
 
+* {
+  pointer-events: none;
+}
+
+#graph {
+  pointer-events: auto;
+  * { pointer-events: auto; }
+}
+
 code {
   font-size: calc(var(--su) * 0.2);
 }
