--- a/intro.less
+++ b/intro.less
@@ -13,6 +13,12 @@
 }
 
 // -- builds --
+.title, .introCommonLanguage {
+  #whatsNext {
+    display: block;
+    opacity: 1;
+  }
+}
 
 .introSpaceySchema {
   #spaceySchema { opacity: 1; }
