--- a/feat.less
+++ b/feat.less
@@ -19,7 +19,7 @@
 }
 
 .sky {
-  #explosion { opacity: 1; filter: blur(20px) brightness(80%); }
+  #explosion { opacity: 1; filter: blur(20px) brightness(50%); }
 }
 
 // -- builds --
@@ -77,3 +77,10 @@
   }
 }
 
+.future {
+  #explosion { opacity: 1; filter: none; }
+  #gutenbergFieldInfer {
+    .right();
+    opacity: 0;
+  }
+}
