--- a/bug.less
+++ b/bug.less
@@ -13,7 +13,7 @@
   pointer-events: none;
   top: 0; left: 0;  
   color: fuchsia;
-  background: linear-gradient(90deg, @midnight-darkest 40%, black, @midnight-darkest 60%);
+  // background: linear-gradient(90deg, @midnight-darkest 40%, black, @midnight-darkest 60%);
   border: thin solid @yellow-base;
   border-left: 10% solid @yellow-base;
   padding: 4px;
