--- a/base.less
+++ b/base.less
@@ -5,16 +5,18 @@ html {
   --typewriter-cursor-blink-rate: 1.2s;
   overflow: hidden;
   height: 100%;
+  background: #000010;
 }
 
 body {
-  background: darken(@midnight-darkest, 5%);
+  background: #000010;
   font-family: Monaco;
   font-size: 26px;
   padding: 0;
   margin: 0;
   overflow: hidden;
   height: 100%;
+  cursor: crosshair;
 }
 
 :global(.vbox) {
@@ -62,7 +64,7 @@ h1 {
   right: @right;
 }
 
-.stage(@top: 0, @left: 0, @width: 100, @height: 100) {
+.stage(@top: 0, @left: 0, @width: 16, @height: 9) {
   .fixed(
     calc(var(--letterbox-top) + @top * var(--su)),
     calc(var(--letterbox-left) + @left * var(--su)),
@@ -146,8 +148,8 @@ build-note {
 }
 
 #graph {
-  .fixed();
-  transition: filter 1s;
+  .stage();
+  transition: filter 1s, transform 1s;
   filter: blur(20px);
 }
 
@@ -158,9 +160,9 @@ build-note {
 }
 
 .left {
-  .stage(0.5, 1, 8, 9);
+  .stage(0.25, 1, 8, 9);
 }
 
 .right {
-  .stage(0.5, 8, 8, 9);
+  .stage(0.25, 8, 8, 9);
 }
